# parsehealthlog

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  IMPROVEMENT_PLAN.md  Makefile  PLAN.md  README.md  TEST_REGENERATION.md  TODO.md  activate-env.ps1  activate-env.sh  config.py  entity_registry.py  exceptions.py  main.py  pyproject.toml  requirements.txt  validate_timeline.py  viewer.py
.github/workflows/: ci.yml  release.yml
docs/: REDESIGN_PLAN.md  pipeline.md
image-assets/: manifest.json
image-assets/web-seo/: site.webmanifest
parsehealthlog/: __init__.py  config.py  exceptions.py  main.py  types.py
parsehealthlog/prompts/: process.system_prompt.md  validate.system_prompt.md  validate.user_prompt.md
profiles/: _template.yaml  template.yaml.example
prompts/: action_plan.system_prompt.md  consensus_next_steps.system_prompt.md  correct_episode_state.system_prompt.md  derive_state.system_prompt.md  experiments.system_prompt.md  extract.system_prompt.md  extract_entities.system_prompt.md  interpret_labs.system_prompt.md  merge_bullets.system_prompt.md  next_labs.system_prompt.md  next_steps.system_prompt.md  next_steps_unified.system_prompt.md  process.system_prompt.md  questions.system_prompt.md  resolve_entities.system_prompt.md  self_resolving_conditions.yaml  specialist_next_steps.system_prompt.md  standard_treatments.yaml  summary.system_prompt.md  targeted_questions.system_prompt.md  update_timeline.system_prompt.md  validate.system_prompt.md  validate.user_prompt.md
skills/health-log-parser-quality-review/: SKILL.md
skills/health-log-parser-quality-review/references/: methodology.md  success_criteria.md  troubleshooting.md
skills/health-log-parser-quality-review/scripts/: generate_reports.py  phase1_validation.py  phase2_preservation.py  phase3_linking.py  phase4_categorization.py  phase5_labs_integration.py  phase6_cross_profile.py  phase7_continuity.py  run_quality_review.py
tests/: test_config.py  test_exceptions.py  test_extraction.py  test_main.py  test_timeline_processing.py  test_validation.py
