[project]
name = "health-log-parser"
version = "0.1.0"
description = "AI-powered tool for structuring and auditing personal health logs"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "openai>=1.60.0",
    "python-dotenv",
    "tqdm",
    "pandas",
    "python-dateutil",
    "tenacity>=8.0.0",
    "pyyaml>=6.0.3",
]

[tool.uv]
dev-dependencies = ["pytest>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
