[project]
name = "parsehealthlog"
dynamic = ["version"]
description = "AI-powered tool for structuring and auditing personal health logs"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Tiago Silva" }]
keywords = ["health", "log", "parser", "llm", "markdown"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "openai>=1.60.0",
    "python-dotenv",
    "tqdm",
    "pandas",
    "python-dateutil",
    "tenacity>=8.0.0",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/tsilva/parsehealthlog"
Repository = "https://github.com/tsilva/parsehealthlog"

[project.scripts]
parsehealthlog = "parsehealthlog.main:main"

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "parsehealthlog/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["parsehealthlog"]

[dependency-groups]
dev = ["pytest>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
